[package]
name = "app"
version = "0.1.0"
description = "cassie desktop"
authors = ["348040933@qq.com"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

members = [
    "cassie_web",
]


[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
state = { version = "0.5" }
#pharosv事件框架
pharos = "0.5.3"
async-std = "1.10"
getset = "0.1.2"
serde_yaml = "0.8"
tokio = { version = "1" ,features = ["full"] }
axum = {version="0.5.9"}
tower-http = { version = "0.3.4",features= ["cors"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
# rbdc-sqlite = { version = "0.1.14" }
thiserror = "1.0"
log = "0.4"
fast_log = { version="1.5.1", features = ["lz4","zip", "gzip"] }
cassie_web = { path = "../cassie_web" }

[features]
bundled = []
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
